[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "pynascar"
version = "0.1.0"
description = "Unofficial tools for NASCAR data"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["nascar", "motorsport", "data", "api"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/ab5525/pynascar"
Repository = "https://github.com/ab5525/pynascar"
Issues = "https://github.com/ab5525/pynascar/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]